--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -56,12 +56,31 @@
                 />
     </FrameLayout>
     </androidx.cardview.widget.CardView>
-
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/history_text"
+            android:layout_marginTop="42dp"
+            android:layout_marginBottom="20dp"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="22dp"
+            style="@style/text_error_search"
+            android:textSize="19sp"
+            android:text="@string/you_were_looking_for"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        <Button
+            android:visibility="gone"
+            android:id="@+id/clear_history"
+            android:layout_width="144dp"
+            android:layout_height="40dp"
+            style ="@style/update_button"
+            android:text="@string/clear_history"
+            android:layout_marginBottom="20dp"/>
     </LinearLayout>
         <LinearLayout
             android:id="@+id/trouble_connection"
@@ -95,9 +114,9 @@
         </LinearLayout>
             <Button
                 android:id="@+id/update"
-                style="@style/update_button"/>
+                style="@style/update_button"
+                />
         </LinearLayout>
-
         <LinearLayout
             android:id="@+id/not_found"
             android:layout_width="wrap_content"
