--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="margin_vertical_activity">8dp</dimen>
     <dimen name="low_low_text_size">11sp</dimen>
     <dimen name="track_author_line">13dp</dimen>
+    <dimen name="normal_text_size">19sp</dimen>
 </resources>
