--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -90,7 +90,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
-        <item name="android:textSize">19sp</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
         <item name="android:textColor">@color/black</item>
     </style>
     <style name="update_button"
