--- a/app/src/main/res/layout/audio_player_activity.xml
+++ b/app/src/main/res/layout/audio_player_activity.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/main"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="?attr/colorPrimary">
@@ -93,7 +94,7 @@
         android:id="@+id/timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="0:00"
+        android:text="0:00"
         style="@style/text_error_search"
         android:textSize="14sp"
         android:layout_marginTop="12dp"
