--- a/app/src/main/res/layout/audio_player_activity.xml
+++ b/app/src/main/res/layout/audio_player_activity.xml
@@ -36,22 +36,24 @@
         android:layout_marginTop="26dp"/>
 
     <TextView
+        android:layout_marginStart="24dp"
         android:id="@+id/trackName"
         style="@style/text_error_search"
         android:textSize="22sp"
         android:layout_marginTop="24dp"
         tools:text = "Название трека"
-        app:layout_constraintStart_toStartOf="@id/trackCover"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/trackCover"/>
 
     <TextView
+        android:layout_marginStart="24dp"
         android:id="@+id/trackGroup"
         style="@style/text_error_search"
         android:textSize="14sp"
         tools:text="Группа"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/trackName"
-        app:layout_constraintStart_toStartOf="@id/trackCover"/>
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <ImageButton
         android:layout_width="51dp"
